Finish inital step

--- a/forge-demo/src/index.css
+++ b/forge-demo/src/index.css
@@ -1,6 +1,3 @@
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
-    Arial, sans-serif;
-  margin: auto;
-  padding: 2rem;
+  background: rgb(234, 238, 243);
 }
